# plasma_applet_mawakit

./: CMakeLists.txt  README  README.md  TODO  kde-plasma-mawakit.spec  plasma_applet_mawakit.desktop
data/: countries-my.db  countries.sql  mawakit.notifyrc
form/: displayform.ui  locationform.ui  manualcalcform.ui  monthlyprayerform.ui  notificationform.ui  qibladirectionform.ui
po/: CMakeLists.txt  ar.po  extract-messages.sh  fr.po  plasma_applet_mawakit.pot
src/: database.cpp  display.cpp  display.h  install.sh  location.cpp  location.h  manualcalc.cpp  mawakit.cpp  mawakit.h  monthlyprayer.cpp  monthlyprayer.h  notification.cpp  notification.h  prayertimes-back.hpp  prayertimes.hpp  qibla.cpp  qibla.h
